Bug 138093 - FILEOPEN DOCX Date selector control resets to year 1900 if placed inside table
Summary: FILEOPEN DOCX Date selector control resets to year 1900 if placed inside table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Czeber László Ádám (NISZ)
URL:
Whiteboard: target:7.6.0 target:7.5.4 target:25.2...
Keywords: bibisected, bisected, filter:docx
Depends on:
Blocks: DOCX-Tables DOCX-Content_Control
  Show dependency treegraph
 
Reported: 2020-11-09 17:00 UTC by NISZ LibreOffice Team
Modified: 2024-07-24 17:19 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (38.61 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-11-09 17:00 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document in Word (29.55 KB, image/png)
2020-11-09 17:00 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document in Writer (29.45 KB, image/png)
2020-11-09 17:00 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-11-09 17:00:18 UTC
Created attachment 167145 [details]
Example file from Word

Attached user-made document contains a date selector widget placed inside a table.
When this widget is opened to select another date the top line reads “january 1900” instead of the preset “january 2017”.
When the widget is copied in Word to a normal paragraph the top line reads 2017 in Writer too.

Steps to reproduce:
    1. Open attached file
    2. Try to select another date from the date selector widgets

Actual results:
The widget in the top table shows “january 1900”

Expected results:
Both widgets should show “january 2017”.

LibreOffice details:
Version: 7.1.0.0.alpha1+ (x64)
Build ID: 00e5c63c35307faacf76a5e2ca7953c4208244ed
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

Also in:
Verzió: 6.4.0.3 (x86)
Build az.: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
CPU szálak: 4; OS: Windows 6.3 Build 9600; Felületmegjelenítés: alapértelmezett; VCL: win; 
Területi beállítások: en-US (hu_HU); Felület nyelve: hu-HU
Calc: CL

Not yet in:
Version: 6.3.0.4 (x86)
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-11-09 17:00:42 UTC
Created attachment 167146 [details]
Screenshot of the original document in Word
Comment 2 NISZ LibreOffice Team 2020-11-09 17:00:58 UTC
Created attachment 167147 [details]
Screenshot of the original document in Writer
Comment 3 Xisco Faulí 2020-11-12 16:29:29 UTC
Reproduced in

Version: 7.1.0.0.alpha1+
Build ID: 03cafc2ab6b1678f82e9a30b6f81e505660ee702
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

The form support was added in https://cgit.freedesktop.org/libreoffice/core/commit/?id=68e1be4ccbb90ee9a788962219a88312c4ffbea2

@Tamás Zolnai, I thought you might be interested in this issue
Comment 4 Gabor Kelemen (Collabora) 2022-06-30 22:22:29 UTC
Still a problem in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 9c796266470183f673eb58a8637dfe621eefa8b3
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 5 Justin L 2022-12-06 15:31:10 UTC
The attachment (field-compat.docx) has several different SDTs in it.
* BlockSdt - w:docPartObj // containing pretty much everything, including table.
* BlockRowSdt - w:date // containing cell and its paragraph
* BlockSdt - w:date // containing a paragraph
Comment 6 Commit Notification 2023-04-26 08:56:22 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e898f95bfab16ddd9b04e516293cb6eb7e0a3847

tdf#138093 DOCX import: fix broken date selector control in table

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 NISZ LibreOffice Team 2023-04-27 11:36:18 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9a555d79b3b00793edf1d51a8a7c76b723cc436d
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 8 Commit Notification 2023-04-28 08:55:00 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/63e1a98e07b12edd967cea48f23e307cf47efea8

tdf#138093 DOCX import: fix broken date selector control in table

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-07-24 11:52:37 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3974c4748b9a2bcd054e0b9f9e3d42bdca45bef2

tdf#138093 tdf#131722 docx import: sdt lost first date character #2

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-07-24 17:19:43 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/66700b8069715e42dd5f127a0daecabca5c6c0a8

tdf#138093 tdf#131722 docx import: sdt lost first date character #2

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.